2008-04-07  Alan McGovern <alan.mcgovern@gmail.com> 

	* PeerIdInternal.cs: Hack-fix: In some cases it can take up to 190
	  seconds for a pending connection request to time out. Force the
	  connection attempt to abort after 10 seconds if it is not
	  successful.

2008-02-26   <> 

	* PeerId.cs: Expose the IConnection through the PeerId so custom connections
	  can match a PeerId to an IConnection

2008-02-01  Alan McGovern <alan.mcgovern@gmail.com> 

	* PeerId.cs: Added close connection method.

2007-12-18  Alan McGovern <alan.mcgovern@gmail.com> 

	* TCPConnection.cs: Now using the 'out ErrorCode' overloads for the sockets.
